src/styles/session/SessionQuestionsContainer.scss
.SessionQuestionsContainer {
  padding-bottom: 30px;
}

.SessionQuestionsWrapper {
  .SessionClosedMessage {
    margin: 20px auto;
    padding: 0 10px;
    font-size: 19px;
    font-weight: 400;
    letter-spacing: 0.3px;
    color: $text-grey;
  }

  .whiteBackground {
    background-color: white;
    border-radius: 10.6px;
  }

  .SessionQuestionsContainer {
    padding-bottom: 30px;

    // .QueueQuestions {
    //     &.MyQuestion {
    //         border: solid 3px #ffdba6;
    //     }
    // }]

    .User {
      margin-bottom: 16px;
    }

    .allAssignedHeader {
      display: flex;
      flex-direction: row;
      width: 100%;
      justify-content: space-between;
      align-items: center;
      padding-right: 10px;

      .icon {
        cursor: pointer;
      }
    }

    .Queue,
    .QuestionHeader {
      text-align: left;
      font-size: 16px;
      color: $text-grey;
      margin: 0;
      font-weight: 400;
      padding: 20px 0px;
      margin-left: 12px;
    }

    .discussionHeaderWrapper {
      position: relative;

      .discussionQuestionsSlider {
        width: 100%;
        border-radius: 8px;
        border: 3px solid #5599db;
        display: flex;
        position: relative;
        align-items: center;
        margin-bottom: 20px;

        &:hover {
          cursor: pointer;
        }

        .discussionSliderSelector {
          background: linear-gradient(45deg, #668ae9 0%, #6db9ea 100%);
          position: absolute;
          left: 2px;
          width: calc(50% - 2px);
          height: 55px;
          border-radius: 6px;
          transition: left 0.3s ease-in-out;
          z-index: 1;

          &.isSlidedRight {
            left: 50%;
          }
        }

        .discussionSliderOption {
          width: 50%;
          font-size: 20px;
          font-weight: 500;
          color: #979797;
          padding: 20px;
          transition: color 0.3s ease-in-out;
          z-index: 1;

          &.isSelected {
            color: white;
          }
        }
      }

      .sortDiscussionQuestionsWrapper {
        display: flex;
        margin: 20px 0px;
        align-items: center;
        justify-content: flex-end;

        .discussionArrowsContainer {
          display: flex;
          align-items: center;
          margin-right: 5px;

          .sortDiscussionArrow {
            width: 20px;
            height: 13px;
          }
        }

        .sortDiscussionQuestionsLabel {
          margin: 0px 5px 0px 0px;
        }

        .sortDiscussionQuestionsOptions {
          display: flex;
          border: 1px solid #3594f1;
          border-radius: 5px;
          width: 200px;
          align-items: center;
          position: relative;

          &:hover {
            cursor: pointer;
          }

          .sortDiscussionsSlider {
            position: absolute;
            left: 1px;
            z-index: 1;
            height: 27px;
            width: calc(50% - 1px);
            background-color: #5599db;
            border-radius: 3px;
            transition: left 0.3s ease-in-out;

            &.slidedRight {
              left: 50%;
            }
          }

          .sortDiscussionQuestionsOption {
            color: #3594f1;
            font-weight: 300;
            font-size: 14px;
            width: 50%;
            padding: 5px 0px;
            transition: color 0.3s ease-in-out;
            z-index: 1;

            &.optionChosen {
              color: white;
            }
          }
        }
      }
    }

    .noQuestionsHeading {
      margin-top: 140px;
      font-size: 24px;
      font-weight: 500;
      letter-spacing: 0.3px;
      color: $text-grey;
    }

    .noQuestionsWarning {
      font-size: 19.2px;
      color: $text-grey;
    }
  }
}

.filter-box {
  display: flex;
  flex-direction: row;
  width: 100%;
  background-color: white;
  margin-top: 12px;
  margin-bottom: 12px;
  border-radius: 10px;
  padding: 12px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);

  .filter-title {
    margin: 12px 0px;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    color: #484848;
    height: fit-content;
    cursor: default;
  }

  .filter-button {
    margin: 10px 20px;
    height: fit-content;
    padding: 5px 8px;
    background-color: white;
    border: 0px;
    border-radius: 5px;
    box-sizing: border-box;
    font-weight: 500;
    font-size: 14px;
    color: #484848;
    font-family: "Roboto", "Lato", "Helvetica Neue", Arial, Helvetica, sans-serif !important;
    cursor: pointer;
    box-shadow: 2px 2px 4px 2px rgba(158, 158, 158, 0.3)
  }
  .filter-button:hover {
    background-color: #e4efff;
  }

  .filter-tag {
    margin: 10px 0px 10px 20px;
    height: fit-content;

    .tag {
      cursor: default;
      display: flex;
      flex-direction: row;
      height: fit-content;
    }

    .tag-name {
      margin: 2px 0px;
    }

    .close {
      padding: 0px 0px 0px 10px;
      background-color: white;
      border: 0px;
      font-weight: bolder;
      font-size: 15px;
      height: fit-content;
      cursor: pointer;
      
      &.primary {
        color: $tag-blue;
      }

      &.secondary {
        color: $secondary-tag;
      }
    }

    .no-tag {
      margin-top: 3px;
      font-size: 14px;
      line-height: 21px;
      cursor: default;
    }
  }

  .dropdown-box {
    margin-left: auto;
    padding: 0px 20px;

    input {
      width: 100%;
      background-color: #eaeaea;
      border: 0px;
      border-radius: 6px;
      padding: 5px;
      font-size: 14px;
    }

    .filter-search-title {
      font-weight: 500;
      font-size: 14px;
      color: #484848;
      height: fit-content;
      margin-bottom: 2px;
      cursor: default;
    }

    input[type="search"]::-webkit-search-cancel-button {
      -webkit-appearance: none;
      height: 10px;
      width: 10px;
      background-image: url('../../media/CloseIcon.svg');
      background-size: cover;
      cursor: pointer;
    }
  }

  .filter-results::-webkit-scrollbar:horizontal {
    display: none;
  }

  .filter-results {
    position: absolute;
    width: 16%;
    display: flex;
    flex-direction: column;
    text-align: left;
    max-height: 50%;
    overflow: auto;
    border-radius: 6px;
    box-shadow: 1px 1px 1px 1px #e1e2e3;
    z-index: 2;

    .filter-result {
      text-align: left;
      padding: 10px 10px 10px 10px;
      color: rgba(0, 0, 0, .87);
      background-color: white;
      box-shadow: 0px 0px 2px 0px #e1e2e3;
      border: 0px;
      cursor: pointer;
    }

    .filter-result:hover {
      background-color: #e4efff;
    }
  }
}

@media only screen and (max-width: $mobile-breakpoint) {
  .sessionQuestionsWrapper {
    .SessionClosedMessage {
      margin: 20px auto;
      font-size: 16px;
    }

    .SessionQuestionsContainer {
      .noQuestionsHeading {
        margin-top: 40px;
      }

      .noQuestionsWarning,
      .noQuestionsHeading {
        font-size: 15px;
      }

      .Queue,
      .QuestionHeader {
        margin-left: 12px;
      }
    }
  }
}

